Added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,7 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
+
+# Ignore entire .idea foldera and the workspace.xml
+.idea/
+.idea/workspace.xml
